# twitter2-api

./: .env  Cargo.toml  docker-compose.yml
migrations/2020-08-09-135901_create-extension-pgcrypto/: down.sql  up.sql
migrations/2020-08-09-144548_create_users/: up.sql
migrations/2020-08-09-150801_create_posts/: up.sql
migrations/2020-08-09-155306_alter_users_add_created_updated_at/: down.sql  up.sql
migrations/2020-08-09-160218_alter_posts_add_created_at/: down.sql  up.sql
migrations/2020-10-18-133649_alter_users_rename_name_to_sub_id/: down.sql  up.sql
migrations/2020-10-18-135526_alter_users_sub_id_type_varchar_30/: down.sql  up.sql
src/: app.rs  error.rs  infra.rs  lib.rs  main.rs  schema.rs  server.rs
src/domain/: model.rs  service.rs
src/domain/model/: identity.rs  post.rs  user.rs
src/domain/service/: post_service.rs  user_service.rs
src/infra/: db_connector.rs  jwt_handler.rs  post_repository.rs  user_repository.rs
