[package]
name = "twitter2-api"
version = "0.1.0"
authors = ["pione30 <g.pionelish30@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15.0"

anyhow = "1.0"
thiserror = "1.0"
