[package]
name = "twitter2-api"
version = "0.1.0"
authors = ["pione30 <g.pionelish30@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "chrono", "uuid"] }
uuid = { version = "0.6", features = ["v4"] }
chrono = "0.4"
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }

anyhow = "1.0"
thiserror = "1.0"
